Added JFoenix slider for UPS